--- a/YEJIN1000ABOUT.css
+++ b/YEJIN1000ABOUT.css
@@ -166,6 +166,8 @@ h2 span::before{
   font-weight: 500;
   margin-top: 100px;
   padding: 0px 100px;
+  animation: fade linear;
+  animation-timeline: view();
 }
 .second_section img{
   place-items: center;
@@ -178,6 +180,8 @@ h2 span::before{
   height:auto;
   display: grid;
   position: relative;
+  animation: fade linear;
+  animation-timeline: view();
 }
 .halfcircle1{
   position: absolute;
@@ -224,6 +228,8 @@ h2 span::before{
   margin-top: 100px;
   transform-origin: left;
   transition: 0.5s;
+  animation: fade linear;
+  animation-timeline: view();
 }
 
 .third_section .bgcolor{
@@ -287,6 +293,8 @@ h2 span::before{
   position: flex;
   transform-origin: left;
   transition: 0.5s;
+  animation: fade linear;
+  animation-timeline: view();
 }
 
 .last_section h2{
@@ -654,4 +662,20 @@ body.active .container::before{
   border: 8px solid #141821;
   transition: 0.75s;
   z-index: -1;
+}
+
+@keyframes fade {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+  20%{
+    opacity: 0;
+  }
+  40%{
+    opacity:1;
+    transform: translate();
+  }
 }
