--- a/YEJIN1000SUPPORT.css
+++ b/YEJIN1000SUPPORT.css
@@ -448,7 +448,7 @@ body.active header nav a:hover{
   color:#ffc53e;
 }
 
-@media (max-width: 800px)
+@media (max-width: 1000px)
 {
   header nav a{
     display: none;
@@ -460,9 +460,67 @@ body.active header nav a:hover{
 }
 
 
-@media (min-width: 800px){
+@media (min-width: 1000px){
   header .toggle{
     display: none;
   }
 }
+
+
+/**footer start**/
+
+
+footer{
+  position: relative;
+  width:100%;
+  min-height:100px;
+  padding:20px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  flex-direction: column;
+  z-index: 1000;
+  margin-top: 50px;
+}
+.sci{
+  position: fixed;
+  bottom: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  z-index: 2;
+  transition: 0.5s;
+  transform-origin: left;
+}
+.sci li{
+  list-style: none;
+  font-size: 2em;
+  width: 50px;
+  height: 50px;
+}
+.sci li a{
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  color:#fff;
+  transition: 0.5s;
+}
+.sci li:hover a{
+  background-color: #fff;
+  color: #141821;
+  transition: 0.5s;
+  transform: translateY(-10px);
+}
+
+body.active footer .sci li{
+  filter:invert(1);
+  transition: 0.5s;
+}
+/** footer part END **/
 
