--- a/YEJIN1000HOMEPAGE.css
+++ b/YEJIN1000HOMEPAGE.css
@@ -138,35 +138,16 @@ header .toggle.active{
 .content .contentBx h3{
   font-weight: 300;
   color: #fff;
-  font-size: 2em;
-  line-height: 1.5em;
+  font-size: 1em;
+  line-height: 1em;
 }
+
 .content .contentBx p{
   font-size: 1em;
   color: #fff;
   margin: 10px 0 20px;
 }
 
-.content .contentBx a{
-  display: inline-block;
-  color: #fff;
-  padding: 10px 20px;
-  margin-right: 20px;
-  font-weight: 500;
-  text-transform: uppercase;
-  text-decoration: none;
-  border: 2px solid #ffc53e;
-  letter-spacing: 2px;
-  transition: 0.5s;
-}
-.content .contentBx a:last-child{
-  background: #ffc53e;
-  color:#111;
-}
-.content .contentBx a:hover{
-  box-shadow: 0 0 15px #ffc53e,
-              0 0 40px #ffc53e;
-}
 .sci{
   position: absolute;
   bottom: 40px;
@@ -275,8 +256,7 @@ section.active .menu{
   }
 
   .content .contentBx h3{
-    margin-top: 10px;
-    font-size: 1.5em;
+    font-size: 1em;
   }
 }
 
@@ -364,3 +344,187 @@ body.active section.active::before{
               0 0 300px #fffaf4,
               0 0 0 1000px #ffe4a4;
 }
+
+body.active .container .card:hover h2{
+  background-color: #fffaf4;
+  transition: 1s;
+}
+body.active .container .card:nth-child(1) .imgBx{
+  background: #fffaf4;
+  transition: 0.5s;
+}
+
+/****/
+
+:root{
+  --clr: #181f31;
+}
+
+.container{
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  gap:20px;
+}
+
+.container .card{
+  position: relative;
+  width:200px;
+  height:60px;
+  background: #ffc53e;
+  border-radius: 5px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.container .card:hover{
+  height: 200px;
+  width:300px;
+  box-shadow: 0 0 15px #ffc53e,
+              0 0 40px #ffc53e;
+}
+
+.container .card .imgBx{
+  position: absolute;
+  display: grid;
+  align-items: center;
+  inset: 3px 3px 3px 3px;
+  background: #ffc53e;
+  transition: 0.5s;
+}
+.container .card:nth-child(1) .imgBx{
+  background: #181f31;
+  transition: 0.5s;
+}
+
+.container .card:nth-child(2) .imgBx h3{
+  color: #181f31;
+}
+
+
+
+.container .card h3{
+  align-items: center;
+  text-align: center;
+  font-weight: 500;
+  text-transform: uppercase;
+  opacity: 1;
+  color:#fff;
+  letter-spacing: 2px;
+}
+
+.container .card:hover h3{
+  opacity: 0;
+}
+
+.container .card:hover .imgBx{
+  inset: -50px 60px 360px 60px;
+  box-shadow: 0 0 0 10px var(--clr);
+  opacity: 0;
+}
+
+
+.container .card .imgBx img{
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.container .card p{
+  margin-top: -200px;
+  position: relative;
+  padding: 40px;
+  text-align: center;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-50px);
+  transition: 0.5s;
+}
+.container .card .pw{
+  position: relative;
+  text-align: center;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-50px);
+  transition: 0.5s;
+}
+
+.container .card:hover p,
+.container .card:hover .pw{
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(40px);
+}
+
+.container .card h2{
+  position: absolute;
+  bottom: 3px;
+  color: #222;
+  transition: 0.5s;
+  font-weight: 600;
+  text-decoration: none;
+  font-size: 15px;
+  opacity: 0;
+}
+.container .card h2 a{
+  text-decoration: none;
+  color: #fff;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.container .card:hover h2{
+  padding:5px 25px;
+  background-color: #181f31;
+  bottom: -10px;
+  border-radius: 15px;
+  opacity: 1;
+  box-shadow: 0 0 0 6px #ffc53e,
+              0 0 15px #ffc53e,
+              0 0 40px #ffc53e;
+}
+.container .card:hover h2:hover{
+  background-color: #ffc53e;
+}
+
+
+
+/****/
+
+.pw {
+  display:grid;
+  margin-top: -10%;
+  justify-content: center;
+  align-items: center;
+}
+
+.pw .password{
+  border: none;
+  background: #fff;
+  width: 200px;
+  font-size: 1rem;
+  outline: 2px solid #181f31;
+  box-sizing: border-box;
+  border-radius: 10px 0 0 10px;
+
+}
+.pw .submit{
+  background-color: #181f31;
+  outline: 2px solid #181f31;
+  display: inline-block;
+  font-size: 1rem;
+  border-radius: 0 10px 10px 0;
+  padding: 0 10px 0 0;
+  border: none;
+}
+
