--- a/YEJIN1000ABOUT.css
+++ b/YEJIN1000ABOUT.css
@@ -95,25 +95,53 @@ h2{
   color: #fff;
   font-size: clamp(2.9rem, 9vw, 6.5rem);
   font-weight: 600;
-  padding: 0 100px;
+  padding: 0 10px;
+  position: relative;
+  left: -35%;
 }
 
 h2 span{
-  position: relative;
   font-weight: 700;
   color: #ffffff1a;
   animation: displayText 15s infinite;
-  animation-delay: calc(-3s * var(--i));
+  --animation-delay-multiplier: -3s;
+  position: absolute; /* 절대 위치 설정 */
+  left: 100%; /* "I am" 다음에 표시되도록 설정 */
+  top: 0; /* 위쪽에 배치 */
 }
 
-@keyframes displayText{
+@keyframes displayText {
   0%{
-    display: inline-block;
+    visibility: visible;
   }
-  20%,100%{
-    display: none;
+  20% {
+    visibility: visible;
+  }
+  20%, 100% {
+    visibility: hidden;
   }
 }
+
+h2 span:nth-child(1) {
+  animation-delay: calc(0 * var(--animation-delay-multiplier));
+}
+
+h2 span:nth-child(2) {
+  animation-delay: calc(1 * var(--animation-delay-multiplier));
+}
+
+h2 span:nth-child(3) {
+  animation-delay: calc(2 * var(--animation-delay-multiplier));
+}
+
+h2 span:nth-child(4) {
+  animation-delay: calc(3 * var(--animation-delay-multiplier));
+}
+
+h2 span:nth-child(5) {
+  animation-delay: calc(4 * var(--animation-delay-multiplier));
+}
+
 
 h2 span::before{
   content: attr(data-text);
@@ -168,6 +196,8 @@ h2 span::before{
   padding: 0px 100px;
   animation: fade linear;
   animation-timeline: view();
+  place-items: center;
+  left:10px;
 }
 .second_section img{
   place-items: center;
@@ -594,6 +624,7 @@ body.active footer .sci li{
     margin-top: 10%;
     font-size: clamp(2.9rem, 9vw, 6.5rem);
   }
+
   section p{
     margin-top: 80px;
     font-size: 12px;
@@ -637,6 +668,16 @@ body.active footer .sci li{
   }
   .second_section .verticle:nth-child(5){
     background-color: #ffdeb3;
+  }
+
+  h2 span{
+    font-weight: 700;
+    color: #ffffff1a;
+    animation: displayText 15s infinite;
+    --animation-delay-multiplier: -3s;
+    position: absolute; /* 절대 위치 설정 */
+    left: 10%; /* "I am" 다음에 표시되도록 설정 */
+    top: 100%; /* 위쪽에 배치 */
   }
 
  /** **/
