--- a/YEJIN1000HOMEPAGE.css
+++ b/YEJIN1000HOMEPAGE.css
@@ -528,3 +528,56 @@ body.active .container .card:nth-child(1) .imgBx{
   border: none;
 }
 
+/** **/
+#popup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .7);
+  z-index: 1;
+}
+
+#popup.hide {
+  display: none;
+}
+
+#popup.has-filter {
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+#popup .content{
+  width: 400px;
+  height: fit-content;
+  padding: 20px 40px;
+  background: #181f31;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, .3);
+  text-align: center;
+  display: grid;
+}
+#popup .content .infoinpop{
+  font-size: 1em;
+  font-weight: 300;
+}
+
+#popup .content button{
+  margin-top: 10px;
+  border-radius: 10px;
+  padding: 0 10px;
+  border: none;
+  width:100%;
+}
+#popup .content button:hover{
+  background-color: #faebd7;
+}
+
+body.active #popup .content{
+  background-color: #ffc53e;
+}
+
