--- a/YEJIN1000ABOUT.css
+++ b/YEJIN1000ABOUT.css
@@ -25,6 +25,7 @@ header{
   justify-content: space-between;
   align-items: center;
   backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
   border-bottom: 1px solid rgba(255,255,255,0.1);
   z-index: 999;
 }
