--- a/YEJIN1000SUPPORT.css
+++ b/YEJIN1000SUPPORT.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Share+Tech+Mono&display=swap');
 
 *{
   margin: 0;
@@ -7,53 +8,17 @@
   font-family: 'Poppins',sans-serif;
 }
 
+.html{
+  scroll-behavior: smooth;
+  scroll-padding:var(--scroll-padding,5rem);
+}
+
 body{
-  min-height: 100vh;
+  min-height: 160vh;
   background-color: #141821;
   transition: 0.75s;
   transform-origin: left;
   opacity: 0;
-}
-.bg{
-  position:absolute;
-  width:100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-.bubbles{
-  position: relative;
-  display: flex;
-}
-
-.bubbles span{
-  z-index: -1;
-  position: relative;
-  min-width: 30px;
-  height: 30px;
-  background-color: #ffc53e;
-  border-radius: 50%;
-  box-shadow: 0 0 0 10px #ffc53e44,
-              0 0 50px #ffc53e,
-              0 0 100px #ffc53e;
-  margin: 0 4px;
-  animation: animate 15s linear infinite;
-  animation-duration: calc(75s / var(--i));
-}
-.bubbles span:nth-child(even){
-  background-color: #ff2d75;
-  box-shadow: 0 0 0 10px #ff2d7544,
-              0 0 50px #ff2d75,
-              0 0 100px #ff2d75;
- transition: 0.75s;
-}
-@keyframes animate {
-  0%{
-    transform: translateY(110vh) scale(0);
-  }
-  100%{
-    transform: translateY(-10vh) scale(1);
-  }
 }
 
 header{
@@ -62,7 +27,7 @@ header{
   width:100%;
   height:100px;
   padding: 0 60px;
-  z-index: 1;
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -87,11 +52,12 @@ header .logoo{
   align-items: center;
 }
 
-header .logo img{
+header .logo .yejinlogogo{
   width: 80px;
   align-items: center;
   margin-right: 15px;
 }
+
 header .logoo span{
   color: #ffc53e;
   border-bottom: 4px solid #ffc53e;
@@ -114,7 +80,6 @@ header nav a:hover{
 }
 
 /*header toggle 1*/
-
 
 header .toggle{
   position: relative;
@@ -176,10 +141,29 @@ header .toggle.active{
 .banner.active .content{
   transform: scale(0);
 }
+
+.banner.active .Second{
+  transform: scale(0);
+}
 /*toggle 1 EnD*/
 
+.First{
+  margin-top:110px;
+  width: 100%;
+  height: 80vh;
+}
+.Second{
+  width:100%;
+  height:60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-origin: left;
+  transition: 0.5s;
+}
+
 .ly{
-  position: absolute;
+  position:absolute;
   width:100%;
   height: 100vh;
   margin-top: 150px;
@@ -211,10 +195,9 @@ header .toggle.active{
   position: relative;
   width:550px;
   height:600px;
-  background: repeating-conic-gradient(from var(--a),#ff00c3 0%,#ff00c3 5%,transparent 5%, transparent 40%,#ff00c3 50%);
-  filter: drop-shadow(0 15px 50px #000);
+  background: repeating-conic-gradient(from var(--a),#c1ffe6 0%,#c1ffe6 5%,transparent 5%, transparent 40%,#c1ffe6 50%);
   border-radius: 20px;
-  animation:  rotating 4s linear infinite;
+  animation:  rotating 30s linear infinite;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -235,9 +218,8 @@ header .toggle.active{
   width:100%;
   height:100%;
   background: repeating-conic-gradient(from var(--a),#ffc53e 0%,#ffc53e 5%,transparent 5%, transparent 40%,#ffc53e 50%);
-  filter: drop-shadow(0 15px 50px #000);
   border-radius: 20px;
-  animation:  rotating 4s linear infinite;
+  animation:  rotating 30s linear infinite;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -264,70 +246,56 @@ header .toggle.active{
   transform-origin: left;
 }
 
-/* PAYPAL */
 
-.container-f .hi{
-  width: 100%;
-  position: relative;
-}
-
-.hi img{
-  width: 200px;
-  transition: 0.5s;
-}
-.hi .logooo101{
-  position: absolute;
-  margin-top: -5%;
-  opacity: 1;
-}
-
-.hi .logooo{
-  opacity: 0;
-  transition: 0.5s;
-}
 .container-f .description{
   width: 100%;
-  height: 10%;
   display: grid;
   align-items: center;
   justify-content: center;
   justify-items: center;
 }
 
-.container-f .description span{
-  font-size: 20px;
+.container-f .description span:nth-child(1){
+  font-size: 1.2em;
   font-weight: bold;
-  color:#ff00c3
+  color:#008751;
+  text-transform:uppercase;
+}
+.container-f .description span:nth-child(2){
+  font-size: 35px;
+  font-weight: bold;
+  color:#008751;
+  text-transform:uppercase;
+  line-height: 30px;
+}
+.container-f .description span:nth-child(3){
+  font-size: 43px;
+  font-weight: bold;
+  color:#008751;
+  text-transform:uppercase;
+  line-height: 30px;
 }
 
 .container-f .description p{
-  font-size: 12px;
-  text-align: center;
-}
-.container-f .paypal{
-  width:100%;
-  height: 40%;
-  background-color: #ffc53e33;
-  border-radius: 30px;
-  align-items: center;
-  justify-content: center;
-  padding: 20px 20px 30px 20px;
+  font-size: 0.8em;
+  padding: 5%;
 }
 
-.container-f .paypal p{
+.container-f .description p span{
+  font-size: 1.1em;
   font-weight: bold;
-  margin-bottom: 3%;
+  color:#008751;
+  text-transform:uppercase;
+  line-height: 30px;
 }
 
-.container-f .footer{
-  font-size: 12px;
-  display: grid;
+
+.container-f .description{
   width: 100%;
-  height: 10%;
-  color: grey;
+  display: grid;
   align-items: center;
   justify-content: center;
-  margin-top: 10%;
+  justify-items: center;
 }
 
 /*toggle*/
@@ -378,9 +346,6 @@ body.active{
               inset 0 -10px 10px rgb(255, 149, 36);
 }
 
-body.active .container::before{
-  filter: drop-shadow(0 15px 50px #ffb300);
-}
 
 body.active .container::after{
   content:'';
@@ -394,7 +359,7 @@ body.active .container::after{
 
 body.active .container{
   filter: drop-shadow(0 15px 50px #fff);
-  background: repeating-conic-gradient(from var(--a),#181f31 0%,#181f31 5%,transparent 5%, transparent 40%,#181f31 50%);
+  background: repeating-conic-gradient(from var(--a),#ff6200 0%,#ff6200 5%,transparent 5%, transparent 40%,#ff6200 50%);
 
 }
 
@@ -407,16 +372,12 @@ body.active header nav a{
   color: #181f31;
 }
 
-body.active .container-f .hi h3 a,
-body.active .container-f .description p,
-body.active .container-f .footer{
+body.active .container-f,
+body.active .container-f .description p{
   color: #181f31;
 }
 
-body.active .container-f .paypal{
-  background-color: #181f31;
-  color: #fff0de;
-}
+
 body.active .container-f .description span{
   color:#181f31;
 }
@@ -426,13 +387,7 @@ body.active header nav a:hover{
   font-weight: 600;
 }
 
-body.active .bubbles span:nth-child(even){
-  background-color: #181f31;
-  box-shadow: 0 0 0 10px #181f3144,
-              0 0 50px #181f31,
-              0 0 100px #181f31;
-  transition: 0.75s;
-}
+
 body.active header .toggle{
   filter: invert(1);
 }
@@ -534,5 +489,202 @@ body.active footer .sci li{
 .logooo{
   width: 250px;
   margin-top: -5%;
+  
+}
+
+/** CARD **/
+
+
+.payment {
+  position: relative; /* fixed → relative 변경 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px; /* 패딩 조정 */
+  margin-top: 20px; /* 추가 여백 */
+  transition: 0.5s;
+  z-index: 5; /* .card보다 낮게 배치 */
+}
+
+
+.payment:hover{
+  padding: 40px;
+  transform:translateY(0);
+}
+
+.payment:hover .card{
+  transform: translateY(-90px);
+}
+
+.payment .bg{
+
+  position: absolute;
+  bottom: 0;
+  height: 70%;
+  width: 100%;
+  border-radius: 25px;
+  background: linear-gradient(225deg, #2196f3,#ff4efd);
+  animation:  rotating 20s linear infinite;
+}
+
+/** **/
+
+.payment .bg::before{
+  position: absolute;
+  content:'';
+  width:100%;
+  height:100%;
+  background: repeating-conic-gradient(from var(--a),#ffc53e 0%,transparent 10%, transparent 40%,#ffc53e 50%);
+  border-radius: 20px;
+  animation:  rotating 20s linear infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation-delay: -1s;
+}
+.payment .bg::after{
+  content:'';
+  position: absolute;
+  inset: 7px;
+  border-radius: 15px;
+  transition: 0.75s;
+}
+/** **/
+
+
+
+.payment .card{
+  position: relative;
+  width: 580px;
+  height: 350px;
+  background: #fcfcfc;
+  border-radius: 15px;
+  padding: 40px;
+  box-shadow: 6px 6px 12px rgba(0,0,0,0,0.05);
+  z-index: 1000;
+  overflow: hidden;
+  transform: translateY(127px);
+  transition:0.5s;
+}
+.payment .card:hover{
+ transform: translateY(0px);
+}
+.payment .card::before{
+  content:'';
+  position:absolute;
+  top:-50%;
+  left: -20%;
+  width: 500px;
+  height:500px;
+  border-radius: 50%;
+  background: linear-gradient(to bottom,rgba(0,0,0,0.05),transparent);
+  pointer-events: none;
+}
+
+.chip{
+  position: absolute;
+  max-width: 70px;
+}
+
+.logoing{
+  position:absolute;
+  top:130px;
+  right:40px;
+  width:60px;
+  height:60px;
+  background: #ea222c;
+  border-radius: 50%;
+  box-shadow: -40px 0 0 rgba(225, 164, 36, 0.5);
+}
+
+.bankName{
+  color: #999;
+  text-align: end;
+  outline:none;
+  width:100%;
+  font-size: 1.5em;
+}
+form{
+  margin-top: 45px;
+}
+.inputBox{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.inputBox span{
+  color:#089cff;
+  font-size: 1.1em;
+}
+.inputBox input{
+  border:none;
+  outline: none;
+  background: transparent;
+  font-size:1.8em;
+  color:#333;
+  font-family: 'Share Tech Mono',monospace;
+}
+.group{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.group .inputBox:last-child{
+  max-width: 60px;
+}
+.btn{
+  position:relative;
+  border:none;
+  outline: none;
+  background-color: none;
+  border-radius: 5px;
+  font-size: 1.5em;
+  cursor: pointer;
+  box-shadow: 3px 3px 6px rgba(0,0,0,0.1);
+  margin-top: -15%;
+  font-family: 'Poppins',sans-serif;
+}
+
+.btn .paypall{
+  padding: 0px 20px 0px 20px;
+  /* background: linear-gradient(225deg, #2196f3,#ff4efd);*/
+  background-color: #fff;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.btn .paypall .ppbtn{
+  margin-top: -36px;
+}
+
+
+body.active .payment .card{
+  background-color: #171920;
+}
+
+body.active .inputBox input{
+  color:#fff;
+}
+
+body.active .payment .card::before{
+  background: linear-gradient(to bottom,rgba(255, 255, 255, 0.1),transparent);
+}
+
+body.active .payment .bg{
+  position: absolute;
+  bottom: 0;
+  height: 70%;
+  width: 100%;
+  border-radius: 25px;
+  background: linear-gradient(225deg,#ff4efd, #2196f3);
+}
+
+.toolttool{
+  width: 100%;
+  display: inline-grid;
   
 }
