--- a/YEJIN1000SUPPORT.css
+++ b/YEJIN1000SUPPORT.css
@@ -52,7 +52,7 @@ header .logoo{
   align-items: center;
 }
 
-header .logo .yejinlogogo{
+header .logo img{
   width: 80px;
   align-items: center;
   margin-right: 15px;
